--- a/index.html
+++ b/index.html
@@ -1,1 +1,186 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Colmar Academy</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+  </head>
+  <body>
+     <header>
+        <div>
+            <!-- Navbar Component -->
+            <div class="d-flex px-4">
+                <div class="d-flex p-3">
+                    <img src="images/ic-logo.svg" alt="logo">
+                    <div class="text-uppercase"><strong>COLMAR</strong><span class="text-color">ACADEMY</span></div>
+                    
+                </div>
+                <nav class="d-flex ms-auto">
+                    <div class="large-nav d-flex d-none d-md-flex d-print-flex">
+                        <div class="p-3">On campus</div>
+                        <div class="p-3">Online</div>
+                        <div class="p-3">For companies</div>
+                        <div class="p-3">Sign in</div>
+                    </div>
+                    <div class="small-nav d-flex d-md-none">
+                        <div class="p-3"><img src="images/ic-on-campus.svg" style="height: 2.5rem;" alt=""></div>
+                        <div class="p-3"><img src="images/ic-online.svg" style="height: 2.5rem;" alt=""></div>
+                        <div class="p-3"><img src="images/ic-login.svg" style="height: 2.5rem;" alt=""></div>
+                </div>
+                </nav>
+            </div>
+        </header>
+        <main class="main">
+            <!--Learn Something new section-->
+            <div class="container-fluid list-group-item-dark">
+                <div class="row">
+                    <div class="col">
+                        <img class="img-fluid p-4" src="./images/banner.jpg" />
+                    </div>
+                    <div class="col">
+                        <p><h1><strong>Learn something new everyday </strong></h1></p>
+                        <p>Loren ipsum dolor sit, amet consectetur adipiscing elit</p>
+                        <div class="justify-content-center"><button type="button" class="btn btn-secondary btn-lg">Start here</button></div>
+                    </div>
+                </div>
+            </div>
+            <!--keep practicing section-->
+            <div class="container-fluid p-4">
+                <div class="row">
+                    <div class="col-md-6 d-none d-md-block d-xl-block">
+                        <img class="img-fluid w-100" src="./images/information-main.jpg" />
+                        <h2><strong class="p-3">It doesn't hurt to keep practicing</strong></h2>
+                        <p class="p-1">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                        <span>Emanuel, Sr Strategist at Hiring.com</span>
+                    </div>
+                        <div class="col justify-content-end">
+                            <div class="card mb-1">
+                                <div class="row no-gutters">
+                                  <div class="col-md-4">
+                                    <img src="images/information-orientation.jpg" class="card-img image-fluid" alt="Orientation">
+                                  </div>
+                                  <div class="col-md-8">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Orientation date</h5>
+                                      <p class="card-text">
+                                        Tue 10/11 & Wed 10/12: 8am-3pm
+                                        </p>
+                                      <a href="#">Read more</a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="card mb-1">
+                                <div class="row no-gutters">
+                                  <div class="col-md-4">
+                                    <img src="images/information-campus.jpg" class="card-img image-fluid" alt="campus">
+                                  </div>
+                                  <div class="col-md-8">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Our campus</h5>
+                                      <p class="card-text">
+                                        Find which campus is close by you
+                                      </p>
+                                    <a href="#">Read more</a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="card mb-1">
+                                <div class="row no-gutters">
+                                  <div class="col-md-4">
+                                    <img src="images/information-guest-lecture.jpg" class="card-img image-fluid" alt="guest lecture">
+                                  </div>
+                                  <div class="col-md-8">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Our guest lecture</h5>
+                                      <p class="card-text">Join a keynote with Oliver Sack about music in medical treatment</p>
+                                      <a href="#">Read more</a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                        </div>
+                </div>
+            </div>
+        <!-- keep practicing section-->
+        <div class="container-fluid bg-light list-group-flush mt-4">
+            <header class="display-3 text-center mb-3"><strong>Start learning</strong></header>
+            <div class="card-deck">
+                <div class="row row-cols-3 justify-content-center">
+                    <div class="col-md-3 mb-4">
+                        <div class="card h-100">
+                            <img src="images/course-software.jpg" class="card-img-top" alt="Software Engineering">
+                            <div class="card-body">
+                            <h5 class="card-title">Software Engineering</h5>
+                            <p class="card-text">COURSES</p>
+                            <p class="card-text">Web Development,Mobile Development,iOT,APIs</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-4">
+                        <div class="card h-100">
+                            <img src="images/course-computer-art.jpg" class="card-img-top" alt="Computer Art">
+                            <div class="card-body">
+                            <h5 class="card-title">Computer Art</h5>
+                            <p class="card-text">COURSES</p>
+                            <p class="card-text">Imaging and Design,Web Design, Motion Graphics and Visual Effects,Computer Animation</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-4">
+                        <div class="card h-100">
+                            <img src="images/course-design.jpg" class="card-img-top" alt="Design">
+                            <div class="card-body">
+                            <h5 class="card-title">Design</h5>
+                            <p class="card-text">COURSES</p>
+                            <p class="card-text">User Experience Design,User Research, Visual Design</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-cols-3 justify-content-center pb-4">
+                    <div class="col-md-3 mb-4">
+                        <div class="card h-100">
+                            <img src="images/course-data.jpg" class="card-img-top" alt="Data">
+                            <div class="card-body">
+                            <h5 class="card-title">Data</h5>
+                            <p class="card-text">COURSES</p>
+                            <p class="card-text">Data Science, Big Data , SQL, Data Visualization</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-4">
+                        <div class="card h-100">
+                            <img src="images/course-business.jpg" class="card-img-top" alt="Business">
+                            <div class="card-body">
+                            <h5 class="card-title">Business</h5>
+                            <p class="card-text">COURSES</p>
+                            <p class="card-text">Product Development, Business Development, Startup</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-4">
+                        <div class="card h-100">
+                            <img src="images/course-marketing.jpg" class="card-img-top" alt="Marketing">
+                            <div class="card-body">
+                            <h5 class="card-title">Marketing</h5>
+                            <p class="card-text">COURSES</p>
+                            <p class="card-text">Analytics, Content Marketing, Mobile Marketing</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
