--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <!--Learn Something new section-->
             <div class="container-fluid list-group-item-dark">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md-6">
                         <img class="img-fluid p-4" src="./images/banner.jpg" />
                     </div>
                     <div class="col">
@@ -57,9 +57,9 @@
                 <div class="row">
                     <div class="col-md-6 d-none d-md-block d-xl-block">
                         <img class="img-fluid w-100" src="./images/information-main.jpg" />
-                        <h2><strong class="p-3">It doesn't hurt to keep practicing</strong></h2>
-                        <p class="p-1">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-                        <span>Emanuel, Sr Strategist at Hiring.com</span>
+                        <strong class="p-4">It doesn't hurt to keep practicing</strong>
+                        <p class="p-4">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                        <span class="p-4">Emanuel, Sr Strategist at Hiring.com</span>
                     </div>
                         <div class="col justify-content-end">
                             <div class="card mb-1">
@@ -94,7 +94,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="card mb-1">
+                              <div class="card mb-1 list-group-item-dark">
                                 <div class="row no-gutters">
                                   <div class="col-md-4">
                                     <img src="images/information-guest-lecture.jpg" class="card-img image-fluid" alt="guest lecture">
@@ -111,12 +111,12 @@
                         </div>
                 </div>
             </div>
-        <!-- keep practicing section-->
-        <div class="container-fluid bg-light list-group-flush mt-4">
+        <!--Course List-->
+        <div class="container-fluid bg-light list-group-flush mt-4 d-none d-md-block d-xl-block">
             <header class="display-3 text-center mb-3"><strong>Start learning</strong></header>
             <div class="card-deck">
                 <div class="row row-cols-3 justify-content-center">
-                    <div class="col-md-3 mb-4">
+                    <div class="col mb-4">
                         <div class="card h-100">
                             <img src="images/course-software.jpg" class="card-img-top" alt="Software Engineering">
                             <div class="card-body">
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 mb-4">
+                    <div class="col mb-4">
                         <div class="card h-100">
                             <img src="images/course-computer-art.jpg" class="card-img-top" alt="Computer Art">
                             <div class="card-body">
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 mb-4">
+                    <div class="col mb-4">
                         <div class="card h-100">
                             <img src="images/course-design.jpg" class="card-img-top" alt="Design">
                             <div class="card-body">
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="row row-cols-3 justify-content-center pb-4">
-                    <div class="col-md-3 mb-4">
+                    <div class="col mb-4">
                         <div class="card h-100">
                             <img src="images/course-data.jpg" class="card-img-top" alt="Data">
                             <div class="card-body">
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 mb-4">
+                    <div class="col mb-4">
                         <div class="card h-100">
                             <img src="images/course-business.jpg" class="card-img-top" alt="Business">
                             <div class="card-body">
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 mb-4">
+                    <div class="col mb-4">
                         <div class="card h-100">
                             <img src="images/course-marketing.jpg" class="card-img-top" alt="Marketing">
                             <div class="card-body">
@@ -181,6 +181,74 @@
                 </div>
             </div>
         </div>
+        <!--Mobile-view course list-->
+        <div class="row d-block d-md-none d-xl-none">
+            <header class="display-3 text-center mb-3"><strong>Start learning</strong></header>
+            <div class="btn btn-secondary" type="button" aria-expanded="false">Software Engineering</div>
+            <div class="btn btn-secondary" type="button" aria-expanded="false">Coumputer Art</div>
+            <div class="btn btn-secondary" type="button" aria-expanded="false">Design</div>
+            <div class="btn btn-secondary" type="button" aria-expanded="false">Data </div>
+            <div class="btn btn-secondary" type="button" aria-expanded="false">Business</div>
+            <div class="btn btn-secondary" type="button" aria-expanded="false">Marketing</div>
+        </div>
+        <!--Thesis exhibits-->
+        <div class="container-fluid p-4">
+            <header class="display-4 text-center mb-3"><strong>Thesis exhibits</strong></header>
+            <div class="row">
+                <div class="col-md-6">
+                    <video controls class="w-100" src="./videos/thesis.mp4" type="video/mp4"></video>
+                    <strong class="p-4 d-none d-md-block d-xl-block">Reimagine urban</strong>
+                    <p class="p-4 d-none d-md-block d-xl-block">
+                        "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,
+                        nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. 
+                        Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+                        Design
+                        Fisma: Design and Propotype
+                        Designer showcase of new prototype product
+                        New York skyline
+                        Now and then
+                        Research study about New York
+                    </p>
+                </div>
+                <div class="col justify-content-end d-none d-md-block d-xl-block">
+                    <div class="card mb-1 list-group-item-dark">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/thesis-fisma.jpg" class="card-img image-fluid" alt="thesis-fisma">
+                            </div>
+                                <div class="col-md-8">
+                                  <div class="card-body">
+                                    <h5 class="card-title">Fisma: Design and Propotype</h5>
+                                    <p class="card-text">
+                                      Designer showcase of new prototype product
+                                    </p>
+                                  </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="card mb-1">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/thesis-now-and-then.jpg" class="card-img image-fluid" alt="thesis-now-and-then">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Now and then</h5>
+                                    <p class="card-text">
+                                      Research study about New York
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--footer-->
+        <footer class="footer">
+            © 2016 Colmar Academy. All rights reserved
+            <span class="footer-span d-none d-md-block d-xl-block">Terms   Privacy </span>
+        </footer> 
     </main>
 </body>
 </html>
