--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="col">
                         <p><h1><strong>Learn something new everyday </strong></h1></p>
                         <p>Loren ipsum dolor sit, amet consectetur adipiscing elit</p>
-                        <div class="justify-content-center"><button type="button" class="btn btn-secondary btn-lg">Start here</button></div>
+                        <div class="justify-content-center"><button type="button" class="btn-secondary">Start here</button></div>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                 <div class="row row-cols-3 justify-content-center pb-4">
                     <div class="col mb-4">
                         <div class="card h-100">
-                            <img src="images/course-data.jpg" class="card-img-top" alt="Data">
+                            <img src="images/course-data.jpg" class="card-img-top image-fluid" alt="Data">
                             <div class="card-body">
                             <h5 class="card-title">Data</h5>
                             <p class="card-text">COURSES</p>
@@ -245,10 +245,12 @@
             </div>
         </div>
         <!--footer-->
-        <footer class="footer">
-            © 2016 Colmar Academy. All rights reserved
-            <span class="footer-span d-none d-md-block d-xl-block">Terms   Privacy </span>
-        </footer> 
+        <section>
+          <footer class="footer">
+              © 2016 Colmar Academy. All rights reserved
+              <p class="footer-span d-none d-md-block d-xl-block"><span class="p-3">Terms</span><span class="p-3">Privacy </span></p>
+          </footer> 
+        </section>
     </main>
 </body>
 </html>
